<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <!-- Button labels -->
    <string name="settingButtonLabel">Settings</string>    
    <string name="manageButtonLabel">Manage</string>
    <string name="selectButtonLabel">Select</string>    
    <string name="historyButtonLabel">History</string>
    <string name="moreButtonLabel">More</string>
    <string name="helpButtonLabel">Help</string>
    <string name="aboutButtonLabel">About</string>
    <string name="pronounceButtonLabel">Pronounce</string>
    
    <!-- Menu items titles -->
    <string name="rescanMenuItemTitle">Rescan storage</string>
    <string name="settingMenuItemTitle">Settings</string>
    <string name="manageMenuItemTitle">Manage</string>
    <string name="aboutMenuItemTitle">About</string>
    <string name="selectTextMenuItemTitle">Select</string>    
    <string name="historyMenuItemTitle">History</string>
    <string name="wikiMenuItemTitle">Wikipedia</string>
    
    <!-- Common Strings -->
    <string name="welcome">MegaDict version 1.4.0.2</string>   
    <string name="noDefinition">There is no definition.</string>    
    <string name="noDictionary">Please choose a dictionary.</string>
    <string name="noDictionary2">There is no dictionary. Please put dictionaries\' data 
    folders in SD card at the location <b>/sdcard/Download/megadict</b>.</string>    
    <string name="searching">Searching... Please wait.</string>
    <string name="recommending">Recommending... Please wait.</string>
    <string name="scanning">Scanning... Please wait.</string>    
    <string name="adding">Adding... Please wait.</string>
    <string name="usingDictionary">You are using %1$d dictionary.</string>
    <string name="usingDictionaryPlural">You are using %1$d dictionaries.</string>
    <string name="selectText">Select text now.</string>
    <string name="canNotSelectText">Can\'t select text.</string>
    <string name="emptyHistory">There is no any word.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteEllipsis">Delete...</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="split">Split</string>
    <string name="searchBarHint">Enter word here</string>
    <string name="chooseAnItem">Choose an item</string>
    <string name="couldNotSpeakGoogle">Couldn\'t speak. Please check your Internet connection.</string>
    <string name="couldNotSpeakTTS">Couldn\'t speak. Something wrong.</string>
    <string name="languageNotSupported">The speaker language is not supported.</string>
    <string name="internetNotConnectedWarning">Internet not connected. Some features will not work.</string>
    <string name="internetNotConnected">Internet not connected.</string>
    <string name="launchURI">Launch this URI?</string>
    <string name="sdcardDoesNotExist">SD card not available or readonly. Please insert it and make sure it writable.</string>
    
    <!-- Dialog title -->
    <string name="wordListDialogTitle">Pick a word</string>
    <string name="searchOrSplitDialogTitle">Search or split</string>
    <string name="historyDialogTitle">History</string>    
    <string name="wikiDialogTitle">New Wikipedia</string>
    <string name="operationDialogTitle">Operations</string>
    
    <!-- Others -->
    <string name="appName">MegaDict</string>    
    <string name="aboutContent"><b>- This is the best dictionary in the world.\n\n- MegaDict is developed by Megatron team.\n\n- Contact:\nemerald.hieu@gmail.com or\ngenzers@gmail.com.</b></string>
    <string name="aboutDialogLabel">All about MegaDict</string>
    <string name="storageLabel">Storage</string>
    
    <!-- Language -->
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
        
    <!-- Preference titles and summaries -->
    <string name="mainPrefTitle">Settings</string>    
    <string name="languageCategoryTitle">Display language</string>
    <string name="languagePrefTitle">Language</string>
    <string name="languagePrefSummary">English</string>    
    <string name="speakerCategoryTitle">Pronunciation</string>
    <string name="speakerTypePrefTitle">Speaker type</string>
    <string name="speakerTypePrefSummary">Sets the speaker type. MegaDict supports two types: Text-to-speech and Google translate.</string>     
    <string name="speakerLanguagePrefTitle">Speaker language</string>
    <string name="speakerLanguagePrefSummary">Sets the language-specific voice for the spoken text.</string>        

</resources>