<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/mainPrefTitle">
        
    <PreferenceCategory android:title="@string/languageCategoryTitle">
	    <ListPreference android:entries="@array/languageStrings" 
	    				android:entryValues="@array/languageValues" 
	    				android:dialogTitle="@string/languagePrefTitle" 
	    				android:dialogIcon="@drawable/crystal_language" 
	    				android:title="@string/languagePrefTitle" android:key="megadict.language" android:summary="@string/languagePrefSummary">
	    </ListPreference>    
    </PreferenceCategory>    
    
    <PreferenceCategory android:title="@string/speakerCategoryTitle">
		<ListPreference android:dialogIcon="@drawable/crystal_multimedia" android:key="megadict.speakerType" android:summary="@string/speakerTypePrefSummary" android:entries="@array/speakerTypes" android:entryValues="@array/speakerTypeValues" android:title="@string/speakerTypePrefTitle" android:dialogTitle="@string/speakerTypePrefTitle"></ListPreference><ListPreference android:title="@string/speakerLanguagePrefTitle" 
						android:key="megadict.speakerLanguage" android:dialogTitle="@string/speakerLanguagePrefTitle" android:dialogIcon="@drawable/crystal_multimedia" android:summary="@string/speakerLanguagePrefSummary" android:entries="@array/displayLanguages" android:entryValues="@array/languages">
		</ListPreference>
		
    </PreferenceCategory>    
</PreferenceScreen>
