<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom|center_horizontal" android:id="@+id/mainPanel" android:padding="0dip">
    <RelativeLayout android:layout_width="fill_parent"
    				android:id="@+id/searchPanel"     							
    				android:layout_weight="0"
    				android:paddingTop="2dip"
    				android:paddingBottom="0dip" 
    				android:layout_height="46dip" 
    				android:background="@color/snow2"> 
    				   				
        <Button android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:id="@+id/pronounceButton"        		
        		android:layout_alignParentLeft="true" 
        		android:drawableLeft="@drawable/ic_lock_silent_mode_off_custom" android:layout_alignParentBottom="true">
        		</Button>
        		
        <AutoCompleteTextView android:layout_width="wrap_content"
        					  android:layout_height="wrap_content"        					  
        					  android:id="@+id/searchEditText"   
        					  android:focusable="true" 
        					  android:hint="@string/searchBarHint" 
        					  android:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone" 
        					  android:layout_toLeftOf="@+id/searchButton"
        					  android:layout_toRightOf="@+id/pronounceButton" 
        					  android:layout_alignParentBottom="true" >
            <requestFocus></requestFocus>
        </AutoCompleteTextView>
        
        <Button android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:id="@+id/searchButton"
        		android:drawableLeft="@drawable/ic_btn_search_custom"   
        		android:layout_alignParentRight="true" android:layout_alignParentBottom="true"></Button>
    </RelativeLayout>
	
    <LinearLayout android:layout_width="fill_parent" 
    			  android:layout_height="wrap_content" 
    			  android:layout_weight="1" android:padding="3dip" 
    			  android:id="@+id/resultPanel" android:background="@drawable/result_background">
    </LinearLayout>
    
    <LinearLayout android:layout_weight="0" 
    			  android:layout_height="wrap_content" 
    			  android:layout_width="fill_parent"
    			  android:weightSum="4" android:id="@+id/bottomButtonPanel" android:background="@color/snow3">
        <Button android:id="@+id/manageButton"
        		style="@style/MainMenuButton"
        		android:text="@string/manageButtonLabel" 
        		android:layout_weight="1">
        </Button>
        <Button style="@style/MainMenuButton" 
        		android:layout_weight="1" android:id="@+id/historyButton" android:text="@string/historyButtonLabel"></Button>
        <Button style="@style/MainMenuButton" 
        		android:layout_weight="1" android:id="@+id/selectButton" android:text="@string/selectButtonLabel"></Button>
        <Button android:id="@+id/moreButton" 
        		style="@style/MainMenuButton" 
        		android:text="@string/moreButtonLabel"
        		android:layout_weight="1"></Button>
    </LinearLayout>


         
    
</LinearLayout>
